@@ -4,8 +4,14 @@
 
 # attr doesn't seem to work, env does
 
+# RNDIS devices
 # parent driver=rndis_host, parent usb interface class=239 (0xef), parent usb interface subclass=1, parent usb interface protocol=1
-SUBSYSTEM=="net", DRIVERS=="rndis_host", ATTRS{bInterfaceClass}=="ef", ATTRS{bInterfaceSubClass}=="01", ATTRS{bInterfaceProtocol}=="01", ENV{pocketpc}="env-synce", RUN+="@UDEVDIR@/synce-udev-rndis"
+# matching on removal is tricky, so just look for the env variable
+
+ACTION=="add", SUBSYSTEM=="net", DRIVERS=="rndis_host", ATTRS{bInterfaceClass}=="ef", ATTRS{bInterfaceSubClass}=="01", ATTRS{bInterfaceProtocol}=="01", ENV{synce}="rndis", RUN+="@UDEVDIR@/synce-udev-rndis"
+
+ACTION=="remove", ENV{synce}=="rndis", RUN+="@UDEVDIR@/synce-udev-rndis"
+
 
 # capabilities = serial, parent driver = ipaq
 # If the device has more than one port, then we need to only use the last
@@ -16,10 +22,10 @@ SUBSYSTEM=="net", DRIVERS=="rndis_host", ATTRS{bInterfaceClass}=="ef", ATTRS{bIn
 # for 2 port devices
 SUBSYSTEM!="tty", GOTO="synce_ipaq_end"
 
-DRIVERS=="ipaq",ATTRS{bNumEndpoints}=="",        ENV{pocketpc}="env-synce"
-DRIVERS=="ipaq",ATTRS{bNumEndpoints}=="0[0123]", ENV{pocketpc}="env-synce"
-DRIVERS=="ipaq",ATTRS{port_number}=="1",         ENV{pocketpc}="env-synce"
+DRIVERS=="ipaq",ATTRS{bNumEndpoints}=="",        ENV{synce}="serial"
+DRIVERS=="ipaq",ATTRS{bNumEndpoints}=="0[0123]", ENV{synce}="serial"
+DRIVERS=="ipaq",ATTRS{port_number}=="1",         ENV{synce}="serial"
 
-ENV{pocketpc}=="env-synce", RUN+="@UDEVDIR@/synce-udev-serial"
+ENV{synce}=="serial", RUN+="@UDEVDIR@/synce-udev-serial"
 
 LABEL="synce_ipaq_end"
